--- a/styles/sass/effects/_card-glow.scss
+++ b/styles/sass/effects/_card-glow.scss
@@ -1,12 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 /* Define a CSS variable for the rotation angle */
 @property --rotate {
   syntax: "<angle>";
   initial-value: 132deg;
   inherits: false;
 }
+
 /* Style for the logo thumbnail */
 .thumbnail {
   position: relative;
@@ -24,7 +22,7 @@
   filter: brightness(1.5); /* Increase brightness by 50% on hover */
   transform: scale(1.1); /* Slightly increase size on hover */
   box-shadow: 0 0 20px rgba(88, 199, 250, 0.7); /* Add outer glow effect */
-  transition: filter 0.3s, transform 0.3s, box-shadow 0.3s;
+  transition: filter 0.3s, transform 0.3s, box-shadow 0.3s;;
 }
 
 /* Pseudo-element for the glow effect */
@@ -36,7 +34,11 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.4) 0%, transparent 70%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.4) 0%,
+    transparent 70%
+  );
   opacity: 0;
   transform: scale(1.2); /* Increase size for the glow effect */
   z-index: -1;
@@ -59,5 +61,3 @@
     --rotate: 360deg;
   }
 }
-
-/*# sourceMappingURL=globals.css.map */
