--- a/styles/sass/globals.scss
+++ b/styles/sass/globals.scss
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'effects/card-glow'
+// effects
+@import 'effects/card-glow';
+@import 'effects/text-glow';
+
